# computer-graphics

./: Bitmap.cpp  Bitmap.h  CMakeLists.txt  README.md  Scene.cpp  Scene.h  geometry.h  main.cpp  mygeometry.h
